--- a/rmarkdown_airportsv2.tex
+++ b/rmarkdown_airportsv2.tex
@@ -641,16 +641,15 @@ Cependant, nous ne pouvons rien dire concernant les ports de ballons.
 
 \includegraphics{rmarkdown_airportsv2_files/figure-latex/unnamed-chunk-18-1.pdf}
 
-Ce barplot des profils de lignes indique la répartition de chaque type
+Ce barplot des profils colonnes indique la répartition de chaque type
 d'aéroport en fonction du pays.
 
-On remarque qu'un nombre limité de pays possèdent des ballonports, des
-héliports et des hydravions. Cependant, pour les autres types
-d'aéroports, l'occurrence est présente dans presque tous les pays.
+On remarque que les États Unis possedent un nombre élevé de tous les
+types d'aéroports mis à part au niveau de ``large\_airport'' et
+``medium\_airport'' où la Chine (le pays marqué en orange) domine.
 
-Par ailleurs, nous notons également que certains pays ont une fréquence
-plus élevée que celle des autres pays pour les types d'aéroports les
-plus fréquents.
+Par ailleurs, nous notons également que le Canada (en jeune) possede
+plusieurs hydravions (``seaplane\_base'').
 
 \begin{verbatim}
 ## **Results of the Correspondence Analysis (CA)**
